@@ -5,5 +5,3 @@
 /mdadm-udeb
 /*.debhelper
 /*.log
-/mkconf
-/bugscript
