@@ -34,24 +34,17 @@ mdadm: configure
 	$(MAKE) all $(BUILDFLAGS) CONFFILE=/etc/mdadm/mdadm.conf CONFFILE2=/etc/mdadm.conf
 .PHONY: mdadm
 
-INTERPOLATED_FILES = debian/bugscript debian/mkconf
-
 clean:
 	dh_testdir
-	rm -f $(INTERPOLATED_FILES)
 	rm -f build-stamp
 	[ ! -f Makefile ] || $(MAKE) clean
 	rm -f mdadm.udeb mdmon.udeb mdadm
 	dh_clean
 	debconf-updatepo
 
-debian/%: VERSION=$(shell dpkg-parsechangelog | sed -ne 's,^Version: ,,p')
-debian/%: debian/%.in
-	sed -re 's,%VERSION%,$(VERSION),g' < $< > $@
-
 install: DESTDIR=$(CURDIR)/debian/mdadm
 install: DESTDIR_UDEB=$(DESTDIR)-udeb
-install: build $(INTERPOLATED_FILES)
+install: build
 	dh_testdir
 	dh_clean -k
 	dh_installdirs
