@@ -1,6 +1,7 @@
 mdadm (3.3.2-2) UNRELEASED; urgency=medium
 
   * remove more leftovers from old versions
+  * do not embed $VERSION to mkconf and bugscript
 
  -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 04 Oct 2014 15:43:57 +0400
 
